Solve "Alignment" exercises
My solutions contain the following: use of flexbox and its derivatives.

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -10,6 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
 /* do not edit this footer */
@@ -23,4 +24,17 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.container {
+  display: flex;
+  margin-top: 32px;
+  justify-content: center;
+  align-items: center;
+  gap: 52px;
+}
+
+.content {
+  flex-basis: 200px;
+  text-align: center;
 }
